k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-orchestrator
  labels:
    app: api-orchestrator
spec:
  type: ClusterIP
  selector:
    app: api-orchestrator
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
